--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: cpp
-compiler: gcc
 os: linux
-script: make
+matrix:
+	include
+		-	compiler: gcc
+			addons:
+				apt:
+					sources: ['ubuntu-toolchain-r-test']
+					packages: [g++-6]
+			env:	COMPILER=g++-6
+		-	compiler: gcc
+			addons:
+				apt:
+					sources: ['ubuntu-toolchain-r-test']
+					packages: ['g++-5']
+			env:	COMPILER=g++-5
+script: make CC=$COMPILER
