--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,3 @@
 language: cpp
-os: linux
-matrix:
-	include
-		-	compiler: gcc
-			addons:
-				apt:
-					sources: ['ubuntu-toolchain-r-test']
-					packages: [g++-6]
-			env:	COMPILER=g++-6
-		-	compiler: gcc
-			addons:
-				apt:
-					sources: ['ubuntu-toolchain-r-test']
-					packages: ['g++-5']
-			env:	COMPILER=g++-5
-script: make CC=$COMPILER
+compiler: gcc
+script: make
